examples/negative/modules/kind_effect_redeclared.kai
# Negative fixture: `Effect` is a builtin kind (declared in the language's
# kind catalog over the builtin `EffectRow` theory). User code cannot
# redeclare it — the kind system is closed over the builtin kinds.

kind Effect : EffectRow with effect

fn main() : Int = 0
